# Sask

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Cargo.toml  Justfile  Makefile  README.txt
CMake/: GLFW3.cmake  spdlog.cmake
Core/: CMakeLists.txt
Core/Include/Sask/Core/: Window.hpp
Core/Sources/Sask/Core/: Window.cc
Examples/CoreSimpleWindow/: CMakeLists.txt  Window.cc
Examples/Hello/: CMakeLists.txt  FragmentShader.glsl  Game.cpp  VertexShader.glsl
Examples/Triangle/: FragmentShader.glsl  Game.cpp  VertexShader.glsl
GL/: CMakeLists.txt
GL/Glad/: GL.h  GL.hpp
GL/Include/SaskGL/: GL.hpp
Include/Core/Graphics/: Display.hpp  OpenGL.hpp  Window.hpp
Include/Core/Utils/: Alias.hpp  GL.hpp
Include/Sask/: Application.hpp  Engine.hpp  Keys.hpp  Renderer.hpp  Shader.hpp  ShaderContainer.hpp  VertexArray.hpp  Window.hpp
Include/Sask/Utils/: Shader.hpp
Sources/Core/Graphics/: Display.cc  Window.cc
Sources/Sask/: Engine.cc  Renderer.cc  Shader.cc  ShaderContainer.cc  VertexArray.cc  Window.cc
Sources/Sask/Utils/: Shader.cc
examples/: hello.rs
examples/hello/: .gitignore  CMakeLists.txt  Makefile  hello.c
inc/sask/: draw.h  driver.h  engine.h  keyboard.h  types.h
src/: app.c  app.rs  draw.c  engine.c  error.rs  event.rs  lib.rs  window.rs
src/drivers/sdl2/: init.c  video.c
